<resources>
  <string name="app_name">eCommerceApp</string>

  <!--#region Log in/Sign up text definition-->
  <string name="txt_email_or_phone_number">Email or phone number</string>
  <string name="txt_password">Password</string>
  <string name="txt_log_in">Log in</string>
  <string name="txt_sign_up">Sign up</string>
  <string name="txt_hello">Hello</string>
  <string name="txt_forgot_your_password">Forgot your password ?</string>
  <string name="txt_create_account">Create new account</string>
  <string name="txt_phone_number">Phone number</string>
  <string name="txt_re_password">Retype password</string>
  <string name="txt_already_log_in">Already account ? Login <b>here</b></string>
  <string name="txt_verify_your_account">Verify your account</string>
  <string name="txt_send_code">Send code</string>
  <string name="txt_otp_verification">OTP Verification</string>
  <string name="txt_we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an <b>One Time Password</b> on this mobile number</string>
  <string name="txt_enter_mobile_number">Enter mobile number</string>
  <!--endregion-->

  <!--#region Bottom navigation text definition-->
  <string name="txt_home">Home</string>
  <string name="txt_home_desc">Home screen</string>
  <string name="txt_saved">Saved</string>
  <string name="txt_saved_desc">Saved items</string>
  <string name="txt_cart">Cart</string>
  <string name="txt_cart_desc">View items in cart</string>
  <string name="txt_bill">Bill</string>
  <string name="txt_bill_desc">View recent bill</string>
  <string name="txt_profile">Profile</string>
  <string name="txt_profile_desc">View your profile</string>
  <!--#endregion-->

  <string name="txt_ok">OK</string>
  <string name="txt_no">NO</string>
  <string name="txt_yes">YES</string>

  <string name="txt_get_otp">Get OTP</string>
  <string name="txt_enter_the_otp_sent_to_your_phone">Enter the OTP sent to your phone</string>
  <string name="txt_didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
  <string name="txt_resend_otp">Resend OTP</string>
  <string name="txt_verify">Verify</string>
  <string name="txt_invalid_otp">Invalid OTP</string>
  <string name="txt_please_enter_valid_otp_sent_to_your_phone">Please enter valid OTP sent your phone</string>

  <string name="txt_welcome">Welcome,</string>
  <string name="txt_sign_in_to_continue">Sign in to continue !</string>
  <string name="txt_google" translatable="false">Google</string>
  <string name="txt_facebook" translatable="false">Facebook</string>
  <string name="txt_or_login_with">or login with</string>
  <string name="txt_i_m_a_new_user">I\'m a new user,</string>
  <string name="txt_username" translatable="false">\@username</string>

  <string name="txt_search_product_categories">Search product, categories</string>
  <string name="txt_categories">Categories</string>
  <string name="txt_sub_categories">Sub categories</string>
  <string name="txt_brands">Brands</string>
  <string name="txt_products">Products</string>
  <string name="txt_add_to_favorite">Add to favorite</string>
  <string name="txt_add_to_carts">Add to carts</string>
  <string name="txt_buy_now">Buy now</string>
  <string name="view_product">View product</string>
  <string name="txt_category">Category</string>
  <string name="txt_brand">Brand</string>
  <string name="txt_product_info">Product info</string>
  <string name="txt_product_options">product options</string>
  <string name="txt_view_more">View more</string>
  <string name="txt_delete">Delete</string>
  <string name="txt_total">Total</string>
  <string name="txt_check_out">Check out</string>
  <string name="txt_your_cart_is_empty">Your cart is empty</string>
  <string name="txt_payment_successful">Payment successful</string>
  <string name="txt_payment_successful_desc">you will receive parcel as soon as possible. Please keep contact !</string>
  <string name="txt_undo">Undo</string>
  <string name="txt_remove_item">Remove item</string>
  <string name="txt_product_desc">Product description</string>
  <string name="txt_load_more">Load more</string>
  <string name="txt_user_image">Image</string>
  <string name="txt_close">Close</string>
  <string name="txt_product_detail">Product detail</string>
  <string name="txt_this_feature_is_under_constructor">This feature is under constructor</string>
  <string name="txt_your_cart">Your cart</string>

</resources>