<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- Home -->
  <item
      android:id="@+id/menu_home"
      android:icon="@drawable/round_home_24"
      android:enabled="true"
      android:title="@string/txt_home"
      android:tooltipText="@string/txt_home_desc"
      tools:ignore="UnusedAttribute" />

  <!-- Saved -->
  <item
      android:id="@+id/menu_saved"
      android:icon="@drawable/round_favorite_24"
      android:enabled="true"
      android:title="@string/txt_saved"
      android:tooltipText="@string/txt_saved_desc"
      tools:ignore="UnusedAttribute" />

  <!-- Cart -->
  <item
      android:id="@+id/menu_cart"
      android:icon="@drawable/round_shopping_cart_24"
      android:enabled="true"
      android:title="@string/txt_cart"
      android:tooltipText="@string/txt_cart_desc"
      tools:ignore="UnusedAttribute" />

  <!-- Bill -->
  <item
      android:id="@+id/menu_bill"
      android:icon="@drawable/round_receipt_long_24"
      android:enabled="true"
      android:title="@string/txt_bill"
      android:tooltipText="@string/txt_bill_desc"
      tools:ignore="UnusedAttribute" />

  <!-- Profile -->
  <item
      android:id="@+id/menu_profile"
      android:icon="@drawable/round_account_circle_24"
      android:enabled="true"
      android:title="@string/txt_profile"
      android:tooltipText="@string/txt_profile_desc"
      tools:ignore="UnusedAttribute" />

</menu>