<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:weightSum="10"
    android:padding="20dp"
    android:orientation="vertical">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_weight="2"
      android:src="@drawable/bg_header"
      android:contentDescription="Header" />

  <com.google.android.material.card.MaterialCardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txt_verify"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/text_input_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_phone_number"
          android:layout_marginTop="120dp"
          android:layout_marginBottom="5dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/button_send_code"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/txt_send_code"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="3dp"
          style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

</LinearLayout>