<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.SignUpActivity"
    android:background="@drawable/bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:layout_margin="20dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:cardBackgroundColor="@color/colorWhite"
      app:cardCornerRadius="10dp"
      app:cardElevation="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingHorizontal="20dp"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_create_account"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="normal" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_profile"
            app:riv_border_color="#001e51"
            app:riv_border_width="2dp"
            app:riv_corner_radius="64dp"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_default_account"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:hint="@string/txt_phone_number"
            android:textColorHint="@color/colorTextSecondary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:maxLength="12"
            android:inputType="phone"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:hint="@string/txt_password"
            android:textColorHint="@color/colorTextSecondary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:hint="@string/txt_re_password"
            android:textColorHint="@color/colorTextSecondary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_round_pill"
            android:text="@string/txt_sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingVertical="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_re_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_forgot_your_password"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/tv_return_login_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_already_log_in"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/colorTextPrimary" />
          </LinearLayout>

        </LinearLayout>


      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>