<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

  <androidx.cardview.widget.CardView
      android:layout_margin="20dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:cardBackgroundColor="@color/colorWhite"
      app:cardCornerRadius="10dp"
      app:cardElevation="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/layout_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/txt_welcome"
              android:textColor="@color/colorTextPrimary"
              android:layout_marginTop="15dp"
              android:textSize="40sp"
              android:textStyle="bold" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/txt_sign_in_to_continue"
              android:textColor="@color/colorTextSecondary"
              android:layout_marginTop="5dp"
              android:textSize="20sp"
              android:textStyle="normal" />

        </LinearLayout>

        <EditText
            android:id="@+id/edittext_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:hint="@string/txt_phone_number"
            android:textColorHint="@color/colorTextSecondary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:maxLength="12"
            android:inputType="phone"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_login_title" />


        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_round"
            android:hint="@string/txt_password"
            android:textColorHint="@color/colorTextSecondary"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_phone_number" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_round_pill"
            android:text="@string/txt_log_in"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingVertical="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_forgot_your_password"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_login_with_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password">

          <View
              android:layout_width="match_parent"
              android:layout_height="2dp"
              android:layout_marginHorizontal="40dp"
              android:layout_marginTop="10dp"
              android:background="@color/colorDivider"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/txt_or_login_with"
              android:background="@color/colorWhite"
              android:gravity="center"
              android:paddingHorizontal="10dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_login_with_other"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center">

            <ImageButton
                android:id="@+id/btn_login_with_fb"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_facebook"
                android:scaleType="fitCenter"
                android:background="@drawable/bg_button_facebook"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:layout_margin="5dp" />

            <ImageButton
                android:id="@+id/btn_login_with_gg"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google"
                android:scaleType="fitCenter"
                android:background="@drawable/bg_button_google"
                android:paddingTop="8dp"
                android:paddingBottom="7dp"
                android:layout_margin="5dp" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_i_m_a_new_user"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/txt_sign_up"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:focusable="false"
                android:clickable="false" />
          </LinearLayout>

        </LinearLayout>


      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

