<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layout_dialog"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_dialog"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textview_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_title_success"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_dialog_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        app:tint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/textview_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_dialog_title" />

    <TextView
        android:id="@+id/textview_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_dialog_title" />


  </androidx.constraintlayout.widget.ConstraintLayout>

  <Button
      android:id="@+id/button_dialog_ok"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:background="@drawable/bg_button_success"
      android:text="@string/txt_ok"
      android:textColor="@color/colorWhite"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
      app:layout_constraintTop_toBottomOf="@id/layout_dialog" />

  <Button
      android:id="@+id/button_dialog_no"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="10dp"
      android:background="@drawable/bg_button_neutral"
      android:text="@string/txt_no"
      android:textColor="@color/colorWhite"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
      app:layout_constraintTop_toBottomOf="@id/layout_dialog"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button_dialog_yes" />

  <Button
      android:id="@+id/button_dialog_yes"
      android:layout_width="0dp"
      android:layout_height="40dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="40dp"
      android:background="@drawable/bg_button_warning"
      android:text="@string/txt_yes"
      android:textColor="@color/colorWhite"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
      app:layout_constraintTop_toBottomOf="@id/layout_dialog"
      app:layout_constraintStart_toEndOf="@id/button_dialog_no"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>